--- a/src/components/Table/table.css
+++ b/src/components/Table/table.css
@@ -2,10 +2,11 @@ table {
     font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
+    border: none;
   }
   table td,
   table th {
-    border: 1px solid #ddd;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.234);
     padding: 8px;
   }
   table tr:nth-child(even) {
@@ -18,6 +19,6 @@ table {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: center;
-    background-color: #4caf50;
-    color: white;
+    background-color: #f2f2f2;
+    color: black;
   }
