--- a/src/components/Table/table.css
+++ b/src/components/Table/table.css
@@ -1,4 +1,5 @@
 table {
+    /* font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif; */
     font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
@@ -10,7 +11,7 @@ table {
     padding: 8px;
   }
   table tr:nth-child(even) {
-    background-color: #f2f2f2;
+    background-color: #81cdeb;
   }
   table tr:hover {
     background-color: #ddd;
