--- a/src/components/Table/table.css
+++ b/src/components/Table/table.css
@@ -1,9 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400&display=swap');
 table {
-    /* font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif; */
-    font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif;
+    font-family: 'Lato', sans-serif;
     border-collapse: collapse;
-    width: 100%;
+    width: 95%;
     border: none;
+    margin: 2em;
   }
   table td,
   table th {
@@ -22,4 +23,9 @@ table {
     text-align: center;
     background-color: #f2f2f2;
     color: black;
+  }
+
+  .loader {
+    margin: 0 auto;
+    width: fit-content;
   }
