--- a/src/components/Table/table.css
+++ b/src/components/Table/table.css
@@ -1,31 +1,36 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400&display=swap");
 table {
-    font-family: 'Lato', sans-serif;
-    border-collapse: collapse;
-    width: 95%;
-    border: none;
-    margin: 2em;
-  }
-  table td,
-  table th {
-    border-bottom: 1px solid rgba(128, 128, 128, 0.234);
-    padding: 8px;
-  }
-  table tr:nth-child(even) {
-    background-color: #81cdeb;
-  }
-  table tr:hover {
-    background-color: #ddd;
-  }
-  table th, tfoot td {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: center;
-    background-color: #f2f2f2;
-    color: black;
-  }
+  font-family: "Lato", sans-serif;
+  border-collapse: collapse;
+  width: 95%;
+  border: none;
+  margin: 2em;
+}
 
-  .loader {
-    margin: 0 auto;
-    width: fit-content;
-  }
+table td,
+table th {
+  border-bottom: 1px solid rgba(128, 128, 128, 0.234);
+  padding: 8px;
+}
+
+table tr:nth-child(even) {
+  background-color: #81cdeb;
+}
+
+table tr:hover {
+  background-color: #ddd;
+}
+
+table th,
+tfoot td {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: #f2f2f2;
+  color: black;
+}
+
+.loader {
+  margin: 0 auto;
+  width: fit-content;
+}
